# dailypapers-ai

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
src/: audio_generator.py  main.py  make_audio.py  make_script.py  media_composer.py  paper_selector.py  script_generator.py  settings.py  youtube_uploader.py
